upd profile modal on mobile, upd logo color, fix scroll bug

--- a/src/components/AnimatedLogo/animatedlogo.module.css
+++ b/src/components/AnimatedLogo/animatedlogo.module.css
@@ -30,6 +30,7 @@
   width: 79px;
   height: 33px;
   transition: var(--transition);
+  color: var(--Orange);
 }
 @media (orientation: portrait) {
   .wrapper {
